= Changelog

== Version 1.0.0-Beta5 - Released xx.xx.xxxx

* https://github.com/svenkubiak/mangooio/issues/24[#24] Switched from properties to yaml configuration (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/17[#17] Added preparsing of routes (svenkubiak)

== Version 1.0.0-Beta4 - Released 29.07.2015

* https://github.com/svenkubiak/mangooio/issues/19[#19] Fixed MangooFluent and refactored testing utilities (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/18[#18] Added default validation messages for form handling (svenkubiak)
* Better exception handling when in dev mode (svenkubiak)
* Fixed bug that prevented flash from bein passed to next request (svenkubiak)
* Optimized the shade plugin to create smaller JAR files (svenkubiak)

== Version 1.0.0-Beta3 - Released 26.07.2015

* Fixed bug that did not set the correct cookie for authentication (svenkubiak)
* Fixed bug in authentication which caused an error when authentication was injected (svenkubiak)
* Fixed bug in cache that throw an NPE when getType was called and value was not in cache (svenkubiak)
* Added method to add additional content to template with a filter (svenkubiak)
* Added missing interfaces methods to maven archetype (svenkubiak)

== Version 1.0.0-Beta2 - Released 23.07.2015

* https://github.com/svenkubiak/mangooio/issues/9[#9] Refactored dev mode exception page (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/15[#15] Added version tag to documentation (PDF and HTML) (svenkubiak) 
* https://github.com/svenkubiak/mangooio/issues/16[#16] Fixed bug that result in wrong compilation when in dev mode (svenkubiak) 
* Cache is not autostarted anymore (svenkubiak)
* Fixed bug that throw NumberFormatException when passing an empty request parameter (svenkubiak)

== Version 1.0.0-Beta1 - Released 17.07.2015

* Added server "Undertow" token to response (svenkubiak)
* Added new lifecycle hook "applicationInitialized" (svenkubiak)